fixed overflow

--- a/style.css
+++ b/style.css
@@ -40,6 +40,9 @@ p {
   float: left;
 }
 
+
+
+
 .box_main {
   background-color: rgba(0,0,0,0.5);
   padding: 20px;
@@ -94,11 +97,14 @@ a {
   font-size: 1.25em;
 }
 
+section {
+  overflow: hidden;
+}
 
 
 @media screen and (max-width: 500px) {
   .box_main {
-    font-size: 1em;
+    font-size: 0.8em;
   }
 
   h1, h2 {
